The web app is ready

--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -2343,6 +2343,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "id": "0a0086b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(scaler,open('scaling.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "9b9c52ba-343a-4bb7-ae5e-433d7d4215b8",
    "metadata": {},
@@ -3108,7 +3119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "id": "73fac6b2-0a76-4966-9a59-da68a1350c0d",
    "metadata": {},
    "outputs": [
@@ -3118,7 +3129,7 @@
        "23.01581920903955"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3126,6 +3137,84 @@
    "source": [
     "pickled_model.predict(new_point)[0]    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "26f5594e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newpoint=dataset.iloc[0,:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a555dcf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CRIM         0.00632\n",
+       "ZN          18.00000\n",
+       "INDUS        2.31000\n",
+       "CHAS         0.00000\n",
+       "NOX          0.53800\n",
+       "RM           6.57500\n",
+       "AGE         65.20000\n",
+       "DIS          4.09000\n",
+       "RAD          1.00000\n",
+       "TAX        296.00000\n",
+       "PTRATIO     15.30000\n",
+       "B          396.90000\n",
+       "LSTAT        4.98000\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'jsonify'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[86], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjsonify\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'jsonify'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8220b52a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
